tests/pass/string_print.kl
// mostra with string literals.
fn inisiu() {
    mostra("Ola, Mundu!\n");
    mostra("Kriol lang\n");
}
