tests/fail/fail_sai_textu_arg.kl
// sai() requires an integer exit code, not a string.
fn inisiu() {
    sai("adeus");
}
